# voiceshark

./: README.md  io.github.danirabbit.voiceshark.yml  meson.build  voiceshark.yml
.github/workflows/: ci.yml  merge.yml
data/: Application.css  gresource.xml  gschema.xml  meson.build  voiceshark.desktop  voiceshark.desktop.in  voiceshark.metainfo.xml
po/: POTFILES  io.github.danirabbit.voiceshark.pot
po/extra/: POTFILES  extra.pot
src/: Application.vala  FinishPage.vala  MainWindow.vala  PracticePage.vala  StartPage.vala
